implement GetMembershipEventsByOrderIDs
